update to first info

--- a/index.html
+++ b/index.html
@@ -42,9 +42,7 @@
    		<div class="top-bar">
    			<a class="menu-toggle" href="#"><span>Menu</span></a>
 
-	   		<div class="logo">
-		         <a href="index.html">KARDS</a>
-		      </div>		      
+	   				      
 
 		   	<nav id="main-nav-wrap">
 					<ul class="main-navigation">
@@ -74,11 +72,11 @@
    			<div class="col-twelve">
 
 	   			<h5>Hello, World.</h5>
-	   			<h1>I'm Juan Dela Cruz.</h1>
+	   			<h1>I'm Anthony Mitchell.</h1>
 
 	   			<p class="intro-position">
 	   				<span>Front-end Developer</span>
-	   				<span>UI/UX Designer</span> 
+	   				<span>Full-Stack Training</span> 
 	   			</p>
 
 	   			<a class="button stroke smoothscroll" href="#about" title="">More About Me</a>
@@ -89,11 +87,9 @@
    	</div> <!-- /intro-content --> 
 
    	<ul class="intro-social">        
-         <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-         <li><a href="#"><i class="fa fa-behance"></i></a></li>
-         <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-         <li><a href="#"><i class="fa fa-dribbble"></i></a></li>
-         <li><a href="#"><i class="fa fa-instagram"></i></a></li>
+         <li><a href="https://github.com/jantmitch" alt="GitHub"><i class="fa fa-github"></i></a></li>
+         <li><a href="https://www.linkedin.com/in/jantmitch1/" alt="LinkedIn"><i class="fa fa-linkedin-square"></i></a></li>
+         <li><a href="https://drive.google.com/file/d/10Qpf3Du8EW2R-B8vDjMz9kXQDF93s99q/view?usp=sharing" alt="Resume"><i class="fa fa-file-pdf-o"></i></a></li>
       </ul> <!-- /intro-social -->      	
 
    </section> <!-- /intro -->
