--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
 
    		</div>
 
-   		<div class="col-six tab-full">
+   		<!-- <div class="col-six tab-full">
 
    			<h3>Skills</h3>
    			<p></p>
@@ -178,9 +178,9 @@
 				   	<strong>Node</strong>
 				   </li>
       
-				</ul> <!-- /skill-bars -->		
+				</ul> 		
 
-   		</div>
+   		</div> -->
 
    	</div>
 
