update to about me

--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
 
    				<img src="images/portfolio_photo.jpeg" alt="Profile Picture">
 
-   				<p class="lead">I am currently studying full-stack web development through the Georgia Tech Full-Stack Coding Bootcamp. I am proficient in HTML5, CSS3, Javascript, JQuery, Bootstrap 3.0 and higher, node.js, and Express. I am currently learning REACT, mongo.db, handlebars, and mySQL. I am excited about this industry because you never stop learning with the ever-changing technological world.
+   				<p class="lead">I am currently employed in Atlanta, GA as a Systems Developer. My focus is mainly on micro-services and proprietary web applications for company-wide use in a logistics based setting. The main development languages the team uses are VueJS, PHP, ES5 & ES6, HTML, CSS, and Javascript. We have a wide range of technologies in place with Linux, Apache, PostgreSQL, and Laravel. The whole team is responsible for all full-stack development on all applications and micro-services.
 
 				</p>
    			</div>   			
