change to about me

--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
 
    				<img src="images/portfolio_photo.jpeg" alt="Profile Picture">
 
-   				<p class="lead">I am currently employed in Atlanta, GA as a Systems Developer. My focus is mainly on micro-services and proprietary web applications for company-wide use in a logistics based setting. The main development languages the team uses are VueJS, PHP, ES5 & ES6, HTML, CSS, and Javascript. We have a wide range of technologies in place with Linux, Apache, PostgreSQL, and Laravel. The whole team is responsible for all full-stack development on all applications and micro-services.
+   				<p class="lead">I am currently employed in Atlanta, GA as a Systems Developer. My focus is mainly on micro-services and proprietary web applications for company-wide use in a logistics based setting. The main development languages the team uses are VueJS, PHP, ES5 & ES6, HTML, and CSS. We have a wide range of technologies in place with Linux, Apache, PostgreSQL, and Laravel. The whole team is responsible for all full-stack development on all applications and micro-services.
 
 				</p>
    			</div>   			
