update home page

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 	   			<h1>I'm Anthony Mitchell.</h1>
 
 	   			<p class="intro-position">
-	   				<span>Front-end Developer</span>
+	   				<span>Systems Developer</span>
 	   				<span>Full-Stack Training</span> 
 	   			</p>
 
