update to remove nav header, change photos, and CSS

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
 	<!-- header 
    ================================================== -->
-   <header>   	
+   <!-- <header>   	
    	<div class="row">
 
    		<div class="top-bar">
@@ -57,8 +57,8 @@
 				</nav>    		
    		</div> <!-- /top-bar --> 
    		
-   	</div> <!-- /row --> 		
-   </header> <!-- /header -->
+   	<!-- </div> /row 		 -->
+   <!-- </header>  --> 
 
 	<!-- intro section
    ================================================== -->
@@ -144,7 +144,7 @@
 
 	         	<div class="bgrid folio-item">
 	               <div class="item-wrap">
-	               	<img src="images/portfolio/stock_market.png" alt="Stocks">
+	               	<img src="images/portfolio/stock_market.png" alt="Stocks App">
 	                  <a href="#modal-01" class="overlay">	                  	           
 	                     <div class="folio-item-table">
 	                     	<div class="folio-item-cell">
@@ -160,7 +160,7 @@
 
 	        		<div class="bgrid folio-item">
 	               <div class="item-wrap">
-	               	<img src="images/portfolio/shutterbug.jpg" alt="Shutterbug">
+	               	<img src="images/portfolio/beer-photo.png" alt="Craft Beer App">
 	               	<a href="#modal-02" class="overlay">              		                  
 	                     <div class="folio-item-table">
 	                     	<div class="folio-item-cell">
@@ -176,7 +176,7 @@
 
 	            <div class="bgrid folio-item">
 	               <div class="item-wrap">
-	               	<img src="images/portfolio/clouds.jpg"alt="Clouds">
+	               	<img src="images/portfolio/retail-open-photo.png"alt="Amazon Clone CLI">
 	                  <a href="#modal-03" class="overlay">             		                  
 	                     <div class="folio-item-table">
 	                     	<div class="folio-item-cell">
@@ -192,7 +192,7 @@
 
 	            <div class="bgrid folio-item">
 	               <div class="item-wrap">
-	               	<img src="images/portfolio/beetle.jpg" alt="Beetle">
+	               	<img src="images/portfolio/friends-photo.png" alt="Friend Finder">
 	                  <a href="#modal-04" class="overlay">                  	                 
 	                     <div class="folio-item-table">
 	                     	<div class="folio-item-cell">
@@ -208,7 +208,7 @@
 
 	        		<div class="bgrid folio-item">
 	               <div class="item-wrap">
-	               	<img src="images/portfolio/lighthouse.jpg" alt="Lighthouse">
+	               	<img src="images/portfolio/funny-joker-photo.png" alt="Gif Search Clone">
 	                  <a href="#modal-05" class="overlay">             		                  
 	                     <div class="folio-item-table">
 	                     	<div class="folio-item-cell">
@@ -224,7 +224,7 @@
 
 	            <div class="bgrid folio-item">
 	               <div class="item-wrap">
-	               	<img src="images/portfolio/salad.jpg" alt="Salad">
+	               	<img src="images/portfolio/macintosh-photo.png" alt="Siri Node Clone">
 	                  <a href="#modal-06" class="overlay">
 	                     <div class="folio-item-table">
 	                     	<div class="folio-item-cell">
@@ -254,7 +254,7 @@
 					   </div>
 
 			         <div class="link-box">
-			            <a href="https://shrouded-hollows-98137.herokuapp.com/">Details</a>
+			            <a href="https://shrouded-hollows-98137.herokuapp.com/" target="_blank">Details</a>
 					      <a href="#" class="popup-modal-dismiss">Close</a>
 			         </div>		      
 
