add resume and change to open links in new tab

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
    	<ul class="intro-social">        
          <li><a href="https://github.com/jantmitch" alt="GitHub"><i class="fa fa-github"></i></a></li>
          <li><a href="https://www.linkedin.com/in/jantmitch1/" alt="LinkedIn"><i class="fa fa-linkedin-square"></i></a></li>
-         <li><a href="https://drive.google.com/file/d/10Qpf3Du8EW2R-B8vDjMz9kXQDF93s99q/view?usp=sharing" alt="Resume"><i class="fa fa-file-pdf-o"></i></a></li>
+         <li><a href="https://drive.google.com/file/d/1Lq5jcIHAUiNayIN-8QIJugBclDJ5Kj-e/view?usp=sharing" target="_blank" alt="Resume"><i class="fa fa-file-pdf-o"></i></a></li>
       </ul> <!-- /intro-social -->      	
 
    </section> <!-- /intro -->
@@ -274,7 +274,7 @@
 					   </div>
 
 			         <div class="link-box">
-			            <a href="https://jantmitch.github.io/OneBeerLater/">Details</a>
+			            <a href="https://jantmitch.github.io/OneBeerLater/" target="_blank">Details</a>
 					      <a href="#" class="popup-modal-dismiss">Close</a>
 			         </div>		      
 
@@ -294,7 +294,7 @@
 					   </div>
 
 			         <div class="link-box">
-			            <a href="https://github.com/jantmitch/Bamazon-CLI-App/blob/master/README.md">Details</a>
+			            <a href="https://github.com/jantmitch/Bamazon-CLI-App/blob/master/README.md" target="_blank">Details</a>
 					      <a href="#" class="popup-modal-dismiss">Close</a>
 			         </div>		      
 
@@ -314,7 +314,7 @@
 					   </div>
 
 			         <div class="link-box">
-			            <a href="https://fast-headland-56613.herokuapp.com/survey">Details</a>
+			            <a href="https://fast-headland-56613.herokuapp.com/survey" target="_blank">Details</a>
 					      <a href="#" class="popup-modal-dismiss">Close</a>
 			         </div>		      
 
@@ -334,7 +334,7 @@
 					   </div>
 
 			         <div class="link-box">
-			            <a href="https://jantmitch.github.io/Git-Giphy-With-It/">Details</a>
+			            <a href="https://jantmitch.github.io/Git-Giphy-With-It/" target="_blank">Details</a>
 					      <a href="#" class="popup-modal-dismiss">Close</a>
 			         </div>		      
 
@@ -354,7 +354,7 @@
 					   </div>
 
 			         <div class="link-box">
-			            <a href="https://github.com/jantmitch/liri-node-app/blob/master/README.md">Details</a>
+			            <a href="https://github.com/jantmitch/liri-node-app/blob/master/README.md" target="_blank">Details</a>
 					      <a href="#" class="popup-modal-dismiss">Close</a>
 			         </div>		      
 
