--- a/index.html
+++ b/index.html
@@ -417,7 +417,7 @@
 			   				     
 			   </p>
 
-   		</div>
+<!--    		</div>
 
    		<div class="col-four tab-full">
 
@@ -430,7 +430,7 @@
    			<p>Phone: (205)826-3047
 			   </p>
 
-   		</div>
+   		</div> -->
    		
    	</div> <!-- /contact-info -->
 		
