--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
    			<div class="col-twelve">
 
 	   			<h5>Hello, World.</h5>
-	   			<h1>I'm Anthony Mitchell.</h1>
+	   			<h1>I'm Anthony</h1>
 
 	   			<p class="intro-position">
 	   				<span>Systems Developer</span>
