--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
    	<ul class="intro-social">        
          <li><a href="https://github.com/jantmitch" alt="GitHub"><i class="fa fa-github"></i></a></li>
          <li><a href="https://www.linkedin.com/in/jantmitch1/" alt="LinkedIn"><i class="fa fa-linkedin-square"></i></a></li>
-         <li><a href="https://drive.google.com/file/d/1Lq5jcIHAUiNayIN-8QIJugBclDJ5Kj-e/view?usp=sharing" target="_blank" alt="Resume"><i class="fa fa-file-pdf-o"></i></a></li>
+         <!-- <li><a href="https://drive.google.com/file/d/1Lq5jcIHAUiNayIN-8QIJugBclDJ5Kj-e/view?usp=sharing" target="_blank" alt="Resume"><i class="fa fa-file-pdf-o"></i></a></li> -->
       </ul> <!-- /intro-social -->      	
 
    </section> <!-- /intro -->
