update to bio paragraph

--- a/index.html
+++ b/index.html
@@ -109,8 +109,11 @@
 
    				<img src="images/portfolio_photo.jpeg" alt="Profile Picture">
 
-   				<p class="lead">I am currently employed in Atlanta, GA as a Fullstack Developer. 
-					My focus recently has been with the use of VueJs, Laravel, PHP, Nuxt, PostgreSQL in a SASS application. 
+   				<p class="lead">Hi, I'm Anthony, a passionate and innovative Full-Stack Developer with expertise in a wide range of 
+					programming languages and tools. With a strong background in developing web-based applications and web services.
+					I excel at creating efficient solutions and solving complex problems. My technical skills include VueJS, PHP, 
+					Laravel, HTML/CSS, Bootstrap, jQuery, API integration, Postgres, and database design. I have a proven track record of 
+					collaborating with teams, simplifying situations, and achieving goals. Let's build something amazing together!
 				</p>
    			</div>   			
 
