--- a/index.html
+++ b/index.html
@@ -75,8 +75,8 @@
 	   			<h1>I'm Anthony</h1>
 
 	   			<p class="intro-position">
-	   				<span>Systems Developer</span>
-	   				<span>Full-Stack Training</span> 
+	   				<span>Full-Stack Developer</span>
+	   				<!-- <span>Full-Stack Training</span> -->
 	   			</p>
 
 	   			<a class="button stroke smoothscroll" href="#about" title="">More About Me</a>
