--- a/index.html
+++ b/index.html
@@ -393,7 +393,7 @@
 
    	<div class="row contact-info">
 
-   		<div class="col-four tab-full">
+   		<div class="col-six tab-full">
 
    			<div class="icon">
    				<i class="icon-pin"></i>
@@ -408,7 +408,7 @@
 
    		</div>
 
-   		<div class="col-four tab-full collapse">
+   		<div class="col-six tab-full collapse">
 
    			<div class="icon">
    				<i class="icon-mail"></i>
